--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-script: "gem install foodcritic -v 1.1.0 && foodcritic -f any -t any ."
+script: "gem install foodcritic -v 1.4.0 && foodcritic -f any -t ~FC023 -t ~FC005 ."
 rvm:
   - 1.9.3
 
