--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,10 @@
+# DO NOT EDIT: File is auto-generated
 * -text
-*.rb text -crlf -binary
-*.rdoc text -crlf -binary
-*.erb text -crlf -binary
-*.xml text -crlf -binary
+*.erb text
+*.md text
+*.rb text
+*.xml text
+*.yml text
+.gitattributes text
+.gitignore text
+LICENSE text
