--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,8 @@
-sudo: required
-dist: trusty
+language: ruby
 
-addons:
-  apt:
-    sources:
-      - chef-current-trusty
-    packages:
-      - chefdk
-
-# Don't `bundle install` which takes about 1.5 mins
-install: echo "skip bundle install"
+install: gem install cookstyle
 
 before_script:
-  - eval "$(chef shell-init bash)"
-  - chef --version
   - cookstyle --version
 
 script:
